# tomopt

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS.md  LICENSE  README.md  environment.yml  mode_muon_tomography.code-workspace  pyproject.toml  requirements.txt  run-mypy  setup.cfg  setup.py
.github/workflows/: black.yml  linting.yml  tests.yml
EM_algorithm_implementation/: Tutorial.ipynb  materials_radiation_length.pkl  plots.py  tracking.py  volume_interest.py  volume_reconstructor_em.py
dev/: Gaussian_spread.ipynb  May_demo_centre_above.ipynb  May_demo_centre_below.ipynb  May_demo_offset-Copy1.ipynb  May_demo_offset-rerun.ipynb  May_demo_offset-rerun2.ipynb  May_demo_offset.ipynb  autograd_tests.ipynb  bias_investigation.ipynb  bimodal_x0_1e3.ipynb  bimodal_x0_1e4.ipynb  bimodal_x0_diff_check.ipynb  bimodal_x0_grad_check.ipynb  bimodal_x0_opt_check.ipynb  bm1_gnn.ipynb  bm2_gnn.ipynb  bm3_gnn-gen_scatters.ipynb  bm3_gnn.ipynb  budget_loss.ipynb  budget_loss2-fast-fixed-coef.ipynb  budget_loss2-fast-fixed-nocoef.ipynb  budget_loss2-slow-fixed-coef.ipynb  budget_loss2-slow-fixed-nocoef.ipynb  budget_loss2-slow-varE-warmup-Copy1.ipynb  budget_loss2-slow-varE-warmup-Copy2.ipynb  budget_loss2-slow-varE-warmup-Copy3.ipynb  budget_loss2-slow-varE-warmup-Copy4.ipynb  budget_loss2-slow-varE-warmup-Copy5.ipynb  budget_loss2-slow-varE-warmup.ipynb  budget_loss2-slow-varE01-coef.ipynb  budget_loss2-slow-varE05-coef.ipynb  budget_loss2-slow-varEC01-coef.ipynb  budget_loss2-slow-varEC05-coef.ipynb  budget_loss2-slow-varEC10-coef.ipynb  budget_loss2-slow-varEC20-coef.ipynb  budget_loss2-slow-varEC50-coef.ipynb  budget_loss2-slow-varEC80-coef.ipynb  budget_loss2-slow-warmup.ipynb  budget_loss2.ipynb  corrected_loss.ipynb  (+98 more)
dev/may_demo/: offset_0.pt  offset_rerun_0.pt
docs/: instructions.md  requirements.txt  run-sphinx-api-doc
docs/_build/doctrees/: authors.doctree  environment.pickle  index.doctree  installation.doctree  introduction.doctree  modules.doctree  tomopt.benchmarks.doctree  tomopt.benchmarks.ladle_furnace.doctree  tomopt.benchmarks.phi_detector.doctree  tomopt.benchmarks.small_walls.doctree  tomopt.benchmarks.u_lorry.doctree  tomopt.doctree  tomopt.inference.doctree  tomopt.muon.doctree  tomopt.optimisation.callbacks.doctree  tomopt.optimisation.data.doctree  tomopt.volume.doctree  (+4 more)
docs/source/: conf.py  index.rst  installation.md  installation.rst  introduction.md  modules.rst  tomopt.benchmarks.ladle_furnace.rst  tomopt.benchmarks.phi_detector.rst  tomopt.benchmarks.rst  tomopt.benchmarks.small_walls.rst  tomopt.benchmarks.u_lorry.rst  tomopt.inference.rst  tomopt.muon.rst  tomopt.optimisation.callbacks.rst  tomopt.optimisation.data.rst  tomopt.optimisation.loss.rst  tomopt.optimisation.rst  tomopt.optimisation.wrapper.rst  tomopt.plotting.rst  tomopt.rst  tomopt.volume.rst
examples/: 00_Hello_World.ipynb  01_Indepth_tutorial_single_cycle.ipynb  02_Indepth_tutorial_optimisation_and_callbacks.ipynb  Hello_World.ipynb  Indepth_tutorial.ipynb  Indepth_tutorial_optimisation_and_callbacks.ipynb  Indepth_tutorial_single_cycle.ipynb
examples/benchmarks/: ladle_furnace.ipynb  ladle_furnace_InferenceMethods.ipynb  ladle_furnace_InferenceMethods_SimulationGeneration.ipynb  ladle_furnace_InferenceMethods_SteelLevelModelling.ipynb
examples/getting_started/: 00_Hello_World.ipynb  01_Indepth_tutorial_single_cycle.ipynb  02_Indepth_tutorial_optimisation_and_callbacks.ipynb  03_fixed_budget_mode.ipynb
examples/legacy_voxel_detectors/: 00_Hello_World.ipynb
examples/panel_detectors/: 00_Hello_World.ipynb  01_Indepth_tutorial_single_cycle.ipynb  02_Indepth_tutorial_optimisation_and_callbacks.ipynb  03_fixed_budget_mode.ipynb  Untitled.ipynb
examples/reconstruction_algo/: 00_asr_example.ipynb
examples/voxel_detectors/: 00_Hello_World.ipynb  01_Indepth_tutorial_single_cycle.ipynb  02_Indepth_tutorial_optimisation_and_callbacks.ipynb
exps/bimodal_mu_bs/: muon_bs_investigation.ipynb
exps/may_demo/: May_demo_centre_below.ipynb  May_demo_offset-rerun2.ipynb
exps/z_sep/: z_sep_analysis-blank.ipynb  z_sep_data_generation.ipynb
tests/: Imaging_test.ipynb  test_callbacks.py  test_core.py  test_forwards.py  test_forwards_backwards.py  test_heatmap.py  test_inference.py  test_layer.py  test_loss.py  test_muon.py  test_passives.py  test_plotting.py  test_quality_speed.py  test_scattering.py  test_utils.py  test_volume.py  test_volume_heatmap.py  test_volume_wrapper.py  test_volume_wrapper_heatmap.py  test_wrapper.py  voxel_profiler-invert.ipynb  voxel_profiler-solver.ipynb
tomopt/: core.py  test.py  test3.py  utils.py  utlis.py  version.py
tomopt/benchmarks/: __init__.py
tomopt/inference/: __init__.py  asr.py  rad_length.py  scattering.py  volume.py
tomopt/loss/: __init__.py  loss.py
tomopt/muon/: __init__.py  generation.py  muon_batch.py  muon_generator.py
tomopt/optimisation/: __init__.py
tomopt/plotting/: __init__.py  appearance.py  diagnostics.py  predictions.py
tomopt/tools/: __init__.py  progress.py
tomopt/volume/: __init__.py  heatmap.py  kuhn_scatter_model.py  layer.py  panel.py  scatter_model.py  volume.py
(+119 files in other folders)
