[tool.poetry]
name = "tomopt"
version = "0.1.0"
description = "TomOpt: Differential Muon Tomography Optimisation."
license = "AGPL-3.0-only"
authors = [
    "Giles Strong <giles.c.strong@gmail.com>",
]
readme = "README.md"
homepage = "https://mode-collaboration.github.io/"
classifiers = [
        "Programming Language :: Python :: 3.10",
        "Intended Audience :: Developers",
        "Intended Audience :: Science/Research",
        "Natural Language :: English",
        "Development Status :: 3 - Alpha",
]
# documentation = "https://python-poetry.org/docs/"
keywords = ["deep learning", "differential programming", "physics", "science", "statistics", "tomography", "detector"]
include = ["py.typed", "volume/scatter_models/*"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.0"
seaborn = ">=0.11.0,<0.12.0"
matplotlib = ">=3.7.0,<3.8.0"
numpy = "^1.26.4"
fastcore = "1.3.20"
fastprogress = "1.0.0"
pandas = ">=1.2.4,<2.0.0"
particle = "^0.23.1"
prettytable = "^3.9.0"
imageio = "2.16.2"
h5py = "^3.10.0"


[tool.poetry.group.dev.dependencies]
notebook = "<7.0.0"
jupyter = "^1.0.0"
ipykernel = "^6.29.2"
pre-commit = "^3.6.1"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pytest-mock = "^3.12.0"
flaky = "^3.7.0"
pytest-lazy-fixture = "^0.6.3"
isort = "^5.13.2"
black = "^24.2.0"
pytest = "<8.0.0"

[tool.poetry.group.docs.dependencies]
sphinx = "<7.0.0"
sphinx-rtd-theme = "<2.0.0"
sphinx-autodoc-typehints = "<2.0.0"
sphinx-autodoc-annotation = "^1.0.post1"
m2r2 = "^0.3.3.post2"
tomopt_sphinx_theme = { git = "https://github.com/GilesStrong/tomopt_sphinx_theme.git" }

[tool.black]
line-length = 160
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''