[metadata]
license_files = LICENSE.txt

[bdist_wheel]
universal=0

[mypy]
python_version = 3.8
disallow-untyped-calls = True
disallow-untyped-defs = True
check-untyped-defs = True
ignore-missing-imports = True
no-strict-optional = True

[mypy-tests.*]
ignore_errors = True

[mypy-setup.py]
ignore_errors = True

[mypy-matplotlib.*]
ignore_missing_imports = True

[flake8]
ignore = E203, E266, E501, W503, F403, F401, E741
max-line-length = 160
max-complexity = 18
select = B,C,E,F,W,T4,B9