[metadata]
license_files = LICENSE.txt

[bdist_wheel]
universal=0

[mypy]
python_version = 3.8
disallow_untyped_calls = False
disallow_untyped_defs = True
check_untyped_defs = True
ignore_missing_imports = True
no_strict_optional = True
exclude = tests/|setup.py

[mypy-matplotlib.*]
ignore_missing_imports = True

[flake8]
ignore = E203, E266, E501, W503, F403, F401, E741, C901
max-line-length = 160
max-complexity = 18
select = B,C,E,F,W,T4,B9