[metadata]
license_files = LICENSE

[bdist_wheel]
universal=0

[isort]
profile = "black"

[mypy]
python_version = 3.8
disallow_untyped_calls = False
disallow_untyped_defs = True
check_untyped_defs = True
exclude = tests/|setup.py|venv/|dev/
no_strict_optional = True

[mypy-matplotlib.*]
ignore_missing_imports = True

[mypy-pandas.*]
ignore_missing_imports = True

[mypy-seaborn.*]
ignore_missing_imports = True

[mypy-fastcore.*]
ignore_missing_imports = True

[mypy-fastprogress.*]
ignore_missing_imports = True

[mypy-IPython.*]
ignore_missing_imports = True

[mypy-prettytable.*]
ignore_missing_imports = True

[mypy-h5py.*]
ignore_missing_imports = True

[mypy-imageio.*]
ignore_missing_imports = True

[mypy-mpl_toolkits.*]
ignore_missing_imports = True

[mypy-functorch.*]
ignore_missing_imports = True

[flake8]
ignore = E203, E266, E501, W503, F403, F401, E741, C901
max-line-length = 160
max-complexity = 18
select = B,C,E,F,W,T4,B9